--- a/build.gradle
+++ b/build.gradle
@@ -24,12 +24,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5'
+	// jpa query log
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.0'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 	
 	//JUnit4 추가
 	testImplementation("org.junit.vintage:junit-vintage-engine") {
