--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5'
+//	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5-jakarta'
 	compileOnly 'org.springframework.boot:spring-boot-devtools'
 	// jpa query log
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.0'
