--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,8 @@ spring:
         show_sql: true
         format_sql: true
         default_batch_fetch_size: 1000
+    open-in-view: false
 
 logging.level:
-  org.hibernate.SQL: debug
+  org.hibernate.SQL: off
 #  org.hibernate.type: trace
