--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
         show_sql: true
         format_sql: true
         default_batch_fetch_size: 1000
-    open-in-view: false
+    open-in-view: true
 
 logging.level:
   org.hibernate.SQL: off
